# career-radar

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4a22de10a21a_create_jobs_table.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: jobs.py
backend/app/routers/: jobs.py
backend/app/schemas/: job.py
backend/app/services/: job_service.py
backend/tests/: conftest.py  test_job_service.py  test_jobs.py
